domain/src/com/example/domain/category/errors/EmptyCategoryNameError.java
package com.example.domain.category.errors;

public final class EmptyCategoryNameError extends CategoryNameError {
}
